@@ -11,6 +11,9 @@ export(round_ps)
 export(univ)
 import(car)
 import(pbkrtest)
+importClassesFrom(Matrix,Matrix)
+importFrom(Matrix,Matrix)
+importFrom(Matrix,sparseMatrix)
 importFrom(coin,approximate)
 importFrom(coin,median_test)
 importFrom(coin,oneway_test)
@@ -25,3 +28,8 @@ importFrom(reshape2,dcast)
 importFrom(stringr,str_c)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_replace_all)
+importMethodsFrom(Matrix,"%*%")
+importMethodsFrom(Matrix,diag)
+importMethodsFrom(Matrix,isSymmetric)
+importMethodsFrom(Matrix,solve)
+importMethodsFrom(Matrix,t)
